improved project folder stuctures

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 <div class="phone-frame">
                     <div class="phone-notch"></div>
                     <div class="phone-screen"> 
-                <img src="splach.png" alt="Main Image"> </div>
+                <img src="src/splach.png" alt="Main Image"> </div>
                 </div>
             </div>
         </div>
@@ -689,22 +689,22 @@
         <div class="screenshots-scroll">
 
              <div class="screenshot">
-                <img src="main.png" alt="Trending Videos Screen">
+                <img src="src/main.png" alt="Trending Videos Screen">
             </div>
             <div class="screenshot">
-                <img src="1.png" alt="Trending Videos Screen">
+                <img src="src/1.png" alt="Trending Videos Screen">
             </div>
             <div class="screenshot">
-                <img src="2.png" alt="Subscriptions Screen">
+                <img src="src/2.png" alt="Subscriptions Screen">
             </div>
             <div class="screenshot">
-                <img src="3.png" alt="Video Player Screen">
+                <img src="src/3.png" alt="Video Player Screen">
             </div>
             <div class="screenshot">
-                <img src="4.png" alt="Search Screen">
+                <img src="src/4.png" alt="Search Screen">
             </div>
             <div class="screenshot">
-                <img src="5.png" alt="What's New Screen">
+                <img src="src/5.png" alt="What's New Screen">
             </div>
         </div>
     </section>
