--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <h2>Download Now</h2>
         <p>Available on Android, Start your premium experience today!</p>
         <div class="store-buttons">
-            <a href="#" class="store-btn">
+            <a href="src/download.html" class="store-btn">
                 <div class="store-icon">🔥</div>
                 <div class="store-text">
                     <small>Download the</small>
