fixed the download and api ui and Download QR.

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <h2>Download Now</h2>
         <p>Available on Android, Start your premium experience today!</p>
         <div class="store-buttons">
-            <a href="src/download.html" class="store-btn">
+            <a href="download.html" class="store-btn">
                 <div class="store-icon">🔥</div>
                 <div class="store-text">
                     <small>Download the</small>
@@ -746,7 +746,7 @@
             </a>
 
 
-            <a href="#" class="store-btn">
+            <a href="src/resouces/apk_downloadable_qr.png" class="store-btn">
                 <div class="store-icon">⛶</div>
                 <div class="store-text">
                     <small>GET IT QR</small>
