--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoMax - Premium Video Streaming Experience</title>
+    <title>Tota - Premium Video Streaming Experience</title>
+
+    <!-- start Google tag (gtag.js) Analytics  -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0SR0GSM8H1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0SR0GSM8H1');
+</script>
+<!-- end Google tag (gtag.js) Analytics  -->
+    
     <style>
         * {
             margin: 0;
