--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
   gtag('config', 'G-0SR0GSM8H1');
 </script>
 <!-- end Google tag (gtag.js) Analytics  -->
+
+    <!-- Microsoft clearty+ start-->
+
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "tv83lrm7y6");
+</script>
+
+    <!-- Microsoft clearty+ end -->
+    
     
     <style>
         * {
